<resources>
    <string name="app_name">Ecologiate</string>
    <string name="title_activity_test">Test de ingreso manual</string>
    <string name="title_activity_login">Ecologiate</string>
    <!-- Facebook -->
    <string name="facebook_app_id">149676695596008</string>
    <string name="fb_login_protocol_scheme">fb149676695596008</string>
    <string name="fb_login">Acceder con Facebook</string>
    <!-- titulos de pantallas -->
    <string name="ajustes_fragment_title">Ajustes</string>
    <string name="altaprod_fragment_title">Producto</string>
    <string name="altaprod_fragment_subtitle">Complete los campos</string>
    <string name="altapdr_fragment_title">Punto de recolección</string>
    <string name="altapdr_fragment_subtitle">Complete los campos</string>
    <string name="enterate_fragment_title">Aprendé jugando</string>
    <string name="escaneo_fragment_title">Búsqueda</string>
    <string name="grupos_fragment_title">Mi perfil</string>
    <string name="inicio_fragment_title">Bienvenido</string>
    <string name="manual_fragment_title">Búsqueda</string>
    <string name="mapa_fragment_title">Mapa</string>
    <string name="micuenta_fragment_title">Mi perfil</string>
    <string name="perfil_fragment_title">Mi perfil</string>
    <string name="noencontrado_fragment_title">Lo sentimos</string>
    <string name="reciclar_fragment_title">Búsqueda</string>
    <string name="resultado_fragment_title">¡Eureka!</string>
    <string name="tips_fragment_title">Aprendé jugando</string>
    <string name="trivia_fragment_title">Aprendé jugando</string>
    <!-- scan activity -->
    <string name="turn_on_flashlight">Encender linterna</string>
    <string name="turn_off_flashlight">Apagar linterna</string>
    <string name="title_activity_menu_lateral">Ecologiate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    /*Títulos y botones generales*/
    <string name="enviar">Enviar</string>
    <string name="guardar">Guardar</string>
    <string name="filtrar">Filtrar</string>
    <string name="buscar">Buscar</string>
    <string name="Reciclar">Reciclar</string>
    <string name="ver_mapa">¿Dónde lo Reciclo?</string>
    <string name="buscando">Buscando...</string>
    <string name="nivel">Nivel:</string>
    <string name="metricas">Impacto de mis reciclajes</string>
    <string name="metricasgrupo">Metricas del Grupo</string>
    <string name="campanias">Campañas Activas</string>
    <string name="arboles">Árboles Salvados:</string>
    <string name="agua">Agua Ahorrada (Lts):</string>
    <string name="energia">Energía Ahorrada (Kws):</string>
    <string name="emisiones">Emisiones (Kgs):</string>
    <string name="medallasMaterial">Medallas por Material</string>
    <string name="medallasCampanias">Medallas por Campañas</string>
    <string name="creargrupo">Crear Grupo</string>
    <string name="invitargrupo">Invitar Amigo</string>
    <string name="salirgrupo">Salir del Grupo</string>
    <string name="nombregrupo">Nombre del Grupo</string>
    <string name="mailgrupo">Ingrese el e-mail</string>


    /*Strings de alta de punto de recoleccion*/
    <string name="direccion_punto_rec">Ingrese la dirección</string>
    <string name="descripcion_punto_rec">Ingrese una breve descripción</string>
    <string name="seleccion_materiales">Seleccione los Materiales:</string>
    <string name="seleccion_categoria">Seleccione la Categoria:</string>
    <string name="reciclable">Reciclable</string>
    <string name="no_tratables">No Tratables</string>
    <string name="organicos">Orgánicos</string>
    <string name="aceite">Aceite</string>
    <string name="bronce">Bronce</string>
    <string name="electronicos">Electrónicos</string>
    <string name="metales">Metales</string>
    <string name="neumaticos">Neumáticos</string>
    <string name="papel_carton">Papel y Carton</string>
    <string name="pilas">Pilas</string>
    <string name="plastico">Plástico</string>
    <string name="tapitas">Tapitas</string>
    <string name="telgopor">Telgopor</string>
    <string name="tetra">Tetra-brik</string>
    <string name="textiles">Textiles</string>
    <string name="vidrio">Vidrio</string>
</resources>
