<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titFiltro"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="20dp"
        android:text="FILTRAR POR MATERIAL" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titFiltro">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="15dp"
                android:alignmentMode="alignBounds"
                android:columnCount="12"
                android:orientation="vertical"
                android:rowCount="12">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginTop="12dp"
                    android:layout_row="4"
                    android:text="@string/seleccion_materiales"
                    android:textColor="@color/textoOscuro"
                    android:textSize="18sp" />


                <CheckBox
                    android:id="@+id/checkAceite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="5"
                    android:text="@string/aceite"
                    android:textColor="@color/colorTexto"
                    android:textSize="16sp"
                    android:buttonTint="@color/colorcheckbox" />

                <CheckBox
                    android:id="@+id/checkBronce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="6"
                    android:text="@string/bronce"
                    android:textColor="@color/colorTexto"
                    android:textSize="16sp"
                    android:buttonTint="@color/colorcheckbox" />

                <CheckBox
                    android:id="@+id/checkElectronicos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="7"
                    android:text="@string/electronicos"
                    android:textColor="@color/colorTexto"
                    android:textSize="16sp"
                    android:buttonTint="@color/colorcheckbox" />

                <CheckBox
                    android:id="@+id/checkMetales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="8"
                    android:text="@string/metales"
                    android:textColor="@color/colorTexto"
                    android:textSize="16sp"
                    android:buttonTint="@color/colorcheckbox" />

                <CheckBox
                    android:id="@+id/checkNeumaticos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="9"
                    android:text="@string/neumaticos"
                    android:textColor="@color/colorTexto"
                    android:textSize="16sp"
                    android:buttonTint="@color/colorcheckbox" />

                <CheckBox
                    android:id="@+id/checkOrganico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="10"
                    android:text="@string/organicos"
                    android:textColor="@color/colorTexto"
                    android:textSize="16sp"
                    android:buttonTint="@color/colorcheckbox" />

                <CheckBox
                    android:id="@+id/checkPapel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="11"
                    android:text="@string/papel_carton"
                    android:textColor="@color/colorTexto"
                    android:textSize="16sp"
                    android:buttonTint="@color/colorcheckbox" />

                <CheckBox
                    android:id="@+id/checkPilas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="5"
                    android:text="@string/pilas"
                    android:textColor="@color/colorTexto"
                    android:textSize="16sp"
                    android:buttonTint="@color/colorcheckbox" />

                <CheckBox
                    android:id="@+id/checkPlastico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="6"
                    android:text="@string/plastico"
                    android:textColor="@color/colorTexto"
                    android:textSize="16sp"
                    android:buttonTint="@color/colorcheckbox" />

                <CheckBox
                    android:id="@+id/checkTapitas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="7"
                    android:text="@string/tapitas"
                    android:textColor="@color/colorTexto"
                    android:textSize="16sp"
                    android:buttonTint="@color/colorcheckbox" />

                <CheckBox
                    android:id="@+id/checkTelgopor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="8"
                    android:text="@string/telgopor"
                    android:textColor="@color/colorTexto"
                    android:textSize="16sp"
                    android:buttonTint="@color/colorcheckbox" />

                <CheckBox
                    android:id="@+id/checkTetra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="9"
                    android:text="@string/tetra"
                    android:textColor="@color/colorTexto"
                    android:textSize="16sp"
                    android:buttonTint="@color/colorcheckbox" />

                <CheckBox
                    android:id="@+id/checkTextiles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="10"
                    android:text="@string/textiles"
                    android:textColor="@color/colorTexto"
                    android:textSize="16sp"
                    android:buttonTint="@color/colorcheckbox" />

                <CheckBox
                    android:id="@+id/checkVidrio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="11"
                    android:text="@string/vidrio"
                    android:textColor="@color/colorTexto"
                    android:textSize="16sp"
                    android:buttonTint="@color/colorcheckbox" />


            </GridLayout>

            <Button
                android:id="@+id/btnFiltrarPR"
                style="@style/ecoButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="15dp"
                android:text="@string/filtrar"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

