<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.app.ecologiate.fragments.ResultadoFragment">

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:layout_weight="0.8"
        android:gravity="center"
        android:text="@string/buscando"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/btnResultReciclar"
            style="@style/ecoButtonStyle"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_reciclaje"
            android:text="@string/Reciclar"
            android:textSize="20sp"
            android:drawableTint="@android:color/white"
            android:layout_weight="0.30" />

        <Button
            android:id="@+id/btnResultVerPdR"
            style="@style/ecoButtonStyle"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ver_mapa" />

    </LinearLayout>

</LinearLayout>
